[tool.poetry]
name = "pymodular"
version = "0.1.0"
description = ""
authors = ["Przemysław Górecki <przemyslaw.gorecki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
